--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ instagram: katychuang.nyc
 
 markdown: kramdown
 permalink: pretty
-highlighter: pygments
+highlighter: rouge
 
 paginate: 10
 paginate_path: "/page/:num"
@@ -39,3 +39,11 @@ paginate_path: "/page/:num"
 sass:
   sass_dir: _scss
   style: :compressed
+
+gems: 
+   - jekyll-paginate
+   - jekyll-mentions
+   - jemoji
+   - jekyll-redirect-from
+   - jekyll-sitemap
+   - jekyll-feed
