--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ twitter: katychuang
 github: katychuang
 dribbble: katychuang
 instagram: katychuang.nyc
+facebook: katychuang.nyc
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
