--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Title of your blog; shows in the header
-name: "Tangible bits"
+name: "One small step"
 
 # Description of your content (will only be used on Google Search)
 description: "Small bits of learning"
