--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,20 @@
 # Title of your blog; shows in the header
-name: "kat's coding blog"
+name: "Macbook & Heels"
 
 # Description of your content (will only be used on Google Search)
 description: "Small bits of learning"
 
 # Your name. Will show in your footer + sidebar
-author: "Kat Chuang"
+author_name: "Dr Kat Chuang"
+author_email: hello@katychuang.com
+author_gravatar:    0c64f5404b8787a038e8f6fa9522224d # Gravatar md5 hash
+twitter_username:   katychuang
+github_username:    katychuang # GitHub username
 
-url: "http://katychuang.com/"
-baseurl: "/5min"
+url: "http://macbookandheels.com/"
+baseurl: ""
+peramlink: /notes/:title
+timezone: America/New_York #https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Exclude these files from your production _site
 exclude: [Gemfile, Gemfile.lock, CNAME, Readme.md]
@@ -29,14 +35,42 @@ facebook: katychuang.nyc
 ga_domain: katychuang.com/5min/
 ga_tracking_id: UA-2990063-5
 
+google_analytics:   UA-78690181-3 # Put your Google Analytics code
+
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
 
 markdown: kramdown
+kramdown:
+  input: GFM
+sass:
+  style: :compressed
 permalink: pretty
 highlighter: rouge
 
 paginate: 10
 paginate_path: "/page/:num"
+
+compress_html:
+  clippings: all
+  ignore:
+    envs: ["test"]
+
+defaults:
+  -
+    scope:
+      path:         ""
+    values:
+      layout:       "null"
+  -
+    scope:
+      type:         "pages"
+    values:
+      layout:       "page"
+  -
+    scope:
+      type:         "posts"
+    values:
+      layout:       "post"
 
 # SCSS
 
